--- a/asset/tree/tree.css
+++ b/asset/tree/tree.css
@@ -17,6 +17,9 @@ input {
     display: flex;
     flex-direction: row;
     gap: 5px;
+    -webkit-box-shadow: 0px 0px 81px -17px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 81px -17px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 81px -17px rgba(0,0,0,0.75);
 }
 input.word {
     outline: 2px solid darkgreen;
