--- a/asset/style.css
+++ b/asset/style.css
@@ -64,6 +64,8 @@ div.answer {
     
 }
 nav.nav-bar {
+    box-sizing: border-box;
+    
     width: 100%;
     height: 80px;
     background-image: url("https://cdn.pixabay.com/photo/2021/11/19/15/21/christmas-6809681_1280.png");
